--- a/src/components/index.css
+++ b/src/components/index.css
@@ -8,7 +8,7 @@ h4 {
 }
 
 body {
-  background-color: antiquewhite;
+  background-color: lightgray;
 }
 
 main {
@@ -31,7 +31,6 @@ footer {
 }
 
 footer h4 {
-  margin-top: auto;
   font-size: 1.5rem;
   text-align: center;
 }
